some sthor shit

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -202,6 +202,10 @@ label {
 button {
   border-radius: 0; }
 
+  #orderBtnId:hover{
+   
+  }
+
 button:focus {
   outline: 1px dotted;
   outline: 5px auto -webkit-focus-ring-color; }
