--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -9,7 +9,7 @@
         <div class="col-md-6 col-sm-12 order-md-last ftco-animate">
           <span class="subheading">Make the dream</span>
           <h1 class="mb-4">We are DeliverIt</h1>
-          <p><a href="order.html" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="learnMore.html"
+          <p><a href="/order" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/learnMore"
               class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Learn more</a></p>
         </div>
         <div class="col-md-6 ftco-animate">
@@ -108,7 +108,7 @@
           <div class="col-md-6 col-sm-12 order-md-last ftco-animate">
             <span class="subheading">Make money when you want</span>
             <h1 class="mb-4">Start your dream with us</h1>
-            <p><a href="order.html" class="btn btn-primary p-3 px-xl-4 py-xl-3">Sing up</a> <a href="learnMore.html"
+            <p><a href="/order" class="btn btn-primary p-3 px-xl-4 py-xl-3">Sing up</a> <a href="/learnMore"
                 class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Learn more</a></p>
           </div>
           <div class="col-md-6 ftco-animate">
