--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -9,7 +9,7 @@
           <span class="subheading">Safe</span>
           <h1 class="mb-4">Weekly home delivery</h1>
           <p class="mb-4 mb-md-5">Make last minuet changes and track your order.</p>
-          <p><a href="order.html" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="learnMore.html"
+          <p><a href="/order" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/learnmore"
               class="btn btn-secondary p-3 px-xl-4 py-xl-3">Learn more</a></p>
         </div>
         <div class="col-md-6 ftco-animate">
