--- a/src/views/learnMore.hbs
+++ b/src/views/learnMore.hbs
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div>
+<main>   <div>
         <P>LEARN MORE</P>
         
         <P>NOW KYS</P>
     </div>
-</body>
-</html>
+</main>
+ 
