--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -9,7 +9,7 @@
         <div class="col-md-6 col-sm-12 order-md-last ftco-animate">
           <span class="subheading">Make the dream</span>
           <h1 class="mb-4">We are DeliverIt</h1>
-          <p><a href="/order" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/learnMore"
+          <p><a href="/orders/create" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href=""
               class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Learn more</a></p>
         </div>
         <div class="col-md-6 ftco-animate">
@@ -108,7 +108,7 @@
           <div class="col-md-6 col-sm-12 order-md-last ftco-animate">
             <span class="subheading">Make money when you want</span>
             <h1 class="mb-4">Start your dream with us</h1>
-            <p><a href="/order" class="btn btn-primary p-3 px-xl-4 py-xl-3">Sing up</a> <a href="/learnMore"
+            <p><a href="order.html" class="btn btn-primary p-3 px-xl-4 py-xl-3">Sing up</a> <a href="learnMore.html"
                 class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">Learn more</a></p>
           </div>
           <div class="col-md-6 ftco-animate">
@@ -129,65 +129,51 @@
 
 
 
-<section class="ftco-section">
+
+<section style="background-color: rgba(241, 241, 236, 0.646);" class="ftco-section">
   <div class="container">
     <div class="row justify-content-center mb-5 pb-3">
       <div class="col-md-7 heading-section ftco-animate text-center">
-        <h2 class="mb-4">Company info</h2>
-        <p>Read latest news about us and our system</p>
+        <h2 class="mb-4">More from US</h2>
+        <p>Make it togetherз</p>
       </div>
     </div>
     <div class="row d-flex">
-      <div class="col-md-4 d-flex ftco-animate">
+      <div style="border-radius: 25% 10%" class="col-md-4 d-flex ftco-animate">
         <div class="blog-entry align-self-stretch">
           <a href="blog-single.html" class="block-20"
-            style="background-image: url('images/Pass-or-Fail-Article-202006171023.png');">
+            style="background-image: url('images/WorkWave-How-to-Add-a-Delivery-Service-For-Your-Business.jpg');">
           </a>
           <div class="text py-4 d-block">
-            <div class="meta">
-              <div><a href="#">Sept 10, 2018</a></div>
-              <div><a href="#">Admin</a></div>
-              <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-            </div>
-            <h3 class="heading mt-2"><a href="#">Not everyting is perfect</a></h3>
-            <p>Sometimes we make a slight misstake whitch takes us on the WRONG path</p>
+            <p>Enjoy flexibility, freedom and competitive earnings by delivering through DeliverIt.</p>
           </div>
         </div>
       </div>
-      <div class="col-md-4 d-flex ftco-animate">
-        <div class="blog-entry align-self-stretch">
-          <a href="blog-single.html" class="block-20" style="background-image: url('images/images.jpg');">
-          </a>
-          <div class="text py-4 d-block">
-            <div class="meta">
-              <div><a href="#">Julay 24, 2023</a></div>
-              <div><a href="#">DeliverIt</a></div>
-              <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-            </div>
-            <h3 class="heading mt-2"><a href="#">Geting is all On Time</a></h3>
-            <p>The briliant system we develped</p>
-          </div>
+    <div  class="col-md-4 d-flex ftco-animate">
+      <div class="blog-entry align-self-stretch">
+        <a href="blog-single.html" class="block-20"
+          style="background-image: url('images/handshake.jpg');">
+        </a>
+        <div class="text py-4 d-block">
+          <p>Grow with DeliverIt! Our technology and user base can help you boost sales and unlock new opportunities!</p>
         </div>
       </div>
-      <div class="col-md-4 d-flex ftco-animate">
+    </div>
+      <div  class="col-md-4 d-flex ftco-animate">
         <div class="blog-entry align-self-stretch">
           <a href="blog-single.html" class="block-20"
-            style="background-image: url('images/stehende-tragende-gerichtsschuhe-des-geschäftsmannes-auf-linie-des-ersten-schrittes-54337306.png');">
+            style="background-image: url('images/210406-stock.jpg');">
           </a>
           <div class="text py-4 d-block">
-            <div class="meta">
-              <div><a href="#">Juli 7, 2023</a></div>
-              <div><a href="#">DeliverIt</a></div>
-              <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-            </div>
-            <h3 class="heading mt-2"><a href="#">Our first steps</a></h3>
-            <p>The most important part-THE START</p>
+            <p>Ready for an exciting new challenge? If you’re ambitious, humble, and love working with others, then we want to hear
+            from you!</p>
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
+
 
 
 <section class="ftco-appointment">
