--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -7,9 +7,9 @@
 
         <div class="col-md-6 col-sm-12 ftco-animate">
           <span class="subheading">Safe</span>
-          <h1 class="mb-4">Weekly home delivery</h1>
+          <h1 class="mb-4">Weekly grocery delivery</h1>
           <p class="mb-4 mb-md-5">Make last minuet changes and track your order.</p>
-          <p><a href="/order" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/learnmore"
+          <p><a href="/orders/create" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="/learnMore"
               class="btn btn-secondary p-3 px-xl-4 py-xl-3">Learn more</a></p>
         </div>
         <div class="col-md-6 ftco-animate">
@@ -152,34 +152,6 @@
     </div>
 
   </div>
-
-</section>
-
-
-<section>
-  <div class="overlay"></div>
-  <div class="container-wrap">
-    <div class="row no-gutters d-md-flex align-items-center">
-      <div class="col-md-6 d-flex align-self-stretch item">
-        <div>
-          <h1 class="mb-422">How it works</h1>
-        </div>
-        <div>
-          <p class="mb-433">DeliverIt is the first of his kind. Our goal is to safe peoples time and enery while they
-            can not worry about ther next eat.
-            You can make and order and chouse what day and time you want to get your grosereys.
-            That day, every week we will deliver you grossery to YOU.
-            You can make changes every time you want to your order and can add one time predukts
-            - produkts you want only for this week and do not want them to be deliver to you every week.</p>
-        </div>
-
-
-      </div>
-      <div class="col-md-6 appointment ftco-animate">
-        <img src="images/Screenshot (1824).png" class="img-fluid" alt="">
-      </div>
-    </div>
-  </div>
 </section>
 
 
@@ -187,59 +159,43 @@
 
 
 
-<section class="ftco-section  ">
+<section style="background-color: rgba(241, 241, 236, 0.646);" class="ftco-section">
   <div class="container">
     <div class="row justify-content-center mb-5 pb-3">
       <div class="col-md-7 heading-section ftco-animate text-center">
-        <h2 class="mb-4">Recent from blog</h2>
-        <p>Read latest news about us and our system</p>
+        <h2 class="mb-4">More from US</h2>
+        <p>Make it togetherз</p>
       </div>
     </div>
     <div class="row d-flex">
-      <div class="col-md-4 d-flex ftco-animate">
+      <div style="border-radius: 25% 10%" class="col-md-4 d-flex ftco-animate">
         <div class="blog-entry align-self-stretch">
           <a href="blog-single.html" class="block-20"
-            style="background-image: url('images/Pass-or-Fail-Article-202006171023.png');">
+            style="background-image: url('images/WorkWave-How-to-Add-a-Delivery-Service-For-Your-Business.jpg');">
           </a>
           <div class="text py-4 d-block">
-            <div class="meta">
-              <div><a href="#">Sept 10, 2018</a></div>
-              <div><a href="#">Admin</a></div>
-              <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-            </div>
-            <h3 class="heading mt-2"><a href="#">Not everyting is perfect</a></h3>
-            <p>Sometimes we make a slight misstake whitch takes us on the WRONG path</p>
+            <p>Enjoy flexibility, freedom and competitive earnings by delivering through DeliverIt.</p>
           </div>
         </div>
       </div>
-      <div class="col-md-4 d-flex ftco-animate">
-        <div class="blog-entry align-self-stretch">
-          <a href="blog-single.html" class="block-20" style="background-image: url('images/images.jpg');">
-          </a>
-          <div class="text py-4 d-block">
-            <div class="meta">
-              <div><a href="#">Julay 24, 2023</a></div>
-              <div><a href="#">DeliverIt</a></div>
-              <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-            </div>
-            <h3 class="heading mt-2"><a href="#">Geting is all On Time</a></h3>
-            <p>The briliant system we develped</p>
-          </div>
+    <div  class="col-md-4 d-flex ftco-animate">
+      <div class="blog-entry align-self-stretch">
+        <a href="blog-single.html" class="block-20"
+          style="background-image: url('images/handshake.jpg');">
+        </a>
+        <div class="text py-4 d-block">
+          <p>Grow with DeliverIt! Our technology and user base can help you boost sales and unlock new opportunities!</p>
         </div>
       </div>
-      <div class="col-md-4 d-flex ftco-animate">
+    </div>
+      <div  class="col-md-4 d-flex ftco-animate">
         <div class="blog-entry align-self-stretch">
           <a href="blog-single.html" class="block-20"
-            style="background-image: url('images/stehende-tragende-gerichtsschuhe-des-geschäftsmannes-auf-linie-des-ersten-schrittes-54337306.png');">
+            style="background-image: url('images/210406-stock.jpg');">
           </a>
           <div class="text py-4 d-block">
-            <div class="meta">
-              <div><a href="#">Juli 7, 2023</a></div>
-              <div><a href="#">DeliverIt</a></div>
-              <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-            </div>
-            <h3 class="heading mt-2"><a href="#">Our first steps</a></h3>
-            <p>The most important part-THE START</p>
+            <p>Ready for an exciting new challenge? If you’re ambitious, humble, and love working with others, then we want to hear
+            from you!</p>
           </div>
         </div>
       </div>
