--- a/src/views/learnMore.hbs
+++ b/src/views/learnMore.hbs
@@ -1,7 +1,10 @@
-<main>   <div>
+<main>
+
+    <body>
+    <div>
         <P>LEARN MORE</P>
-        
         <P>NOW KYS</P>
     </div>
+</body>
+
 </main>
- 
