--- a/src/views/singUp.hbs
+++ b/src/views/singUp.hbs
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+
   <head>
     <title>DeliverIt</title>
     <meta charset="utf-8">
@@ -25,13 +24,42 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
-  </head>
-<body>
+  
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   
     <!--Stylesheet-->
-    <style media="screen">
+    
+</head>
+<main>
+    <body >
+    <div style="padding-top: 23%;" >
+        <div class="shape"></div>
+        <div class="shape"></div>
+    </div>
+    <form>
+        <h3>Sing up</h3>
+
+        <label for="username">Username</label>
+        <input type="text" placeholder="Username" id="username">
+
+        <label for="username">Email</label>
+        <input type="text" placeholder="Email" id="username">
+
+        <label for="password">Password</label>
+        <input type="password" placeholder="Password" id="password">
+
+
+        <a href="/login">Already have account?</a>
+
+        <button>Sing up</button>
+        
+    </form>
+</body>
+</main>
+
+
+<style media="screen">
       *,
 *:before,
 *:after{
@@ -77,7 +105,7 @@ form{
     height: 520px;
     width: 400px;
     background-color: rgba(255,255,255,0.13);
-    position: absolute;
+    position: sticky;
     transform: translate(-50%,-50%);
     top: 50%;
     left: 50%;
@@ -155,30 +183,5 @@ button{
   margin-right: 4px;
 }
 
+
     </style>
-</head>
-<body>
-    <div class="background">
-        <div class="shape"></div>
-        <div class="shape"></div>
-    </div>
-    <form>
-        <h3>Sing up</h3>
-
-        <label for="username">Username</label>
-        <input type="text" placeholder="Username" id="username">
-
-        <label for="username">Email</label>
-        <input type="text" placeholder="Email" id="username">
-
-        <label for="password">Password</label>
-        <input type="password" placeholder="Password" id="password">
-
-
-        <a href="index.html">Back</a>
-
-        <button>Sing up</button>
-        
-    </form>
-</body>
-</html>
