--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -28,15 +28,18 @@
   <body>
   	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-		      <a class="navbar-brand" href="/"><span class="flaticon-pizza-1 mr-1"></span>Pizza<br><small>Delicous</small></a>
+		      <a class="navbar-brand" href="/"><img src="images/shopping-bag (3).svg">Bind<br><small>Delivery</small></a>
 		      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 		        <span class="oi oi-menu"></span> Menu
 		      </button>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
+
+            
 	          <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
-			  <li class="nav-item" id="orderBtnId"><a href="/order" class="nav-link">Order</a></li>
+			  <li class="nav-item"><a href="/orders/create" class="nav-link">Order</a></li>
         <li class="nav-item"><a href="/beADeliver" class="nav-link">BecomeAdeliver</a></li>
+        <li class="nav-item"><a href="/binds" class="nav-link">Binds</a></li>
 	          <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
 	         <!-- <li class="nav-item"><a href="beADeliver.html" class="nav-link">Become  deliver</a></li> -->
 			  <li class="nav-item"><a href="/singup" class="nav-link">Sing up</a></li>
@@ -125,7 +128,7 @@
   <script src="js/jquery.timepicker.min.js"></script>
   <script src="js/scrollax.min.js"></script>
 
-  
+ 
   <script src="js/main.js"></script>
     
   </body>
