made cosmetic changes to the UI

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,7 @@
 
-<main><section class="home-slider owl-carousel img" style="background-image: url(images/Background-website-01.jpg);">
+<main>
+  
+  <section class="home-slider owl-carousel img" style="background-image: url(images/Background-website-01.jpg);">
   <div class="slider-item">
     <div class="overlay"></div>
     <div class="container">
