--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -40,7 +40,7 @@
             <div class="shape"></div>
         </div>
         <form id="loginForm">
-            <h3>Login Here</h3>
+            <h3>Login</h3>
 
             <label for="username">Username</label>
             <input type="text" placeholder="Email or Phone" id="username">
